# cuda-improc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cudaimproc/: cudacheck.h  execonfig.h  imgio.h  imutils.h  utils.h
include/matrix/: matrix.cuh
src/: execonfig.cpp  imgio.cpp  imutils.cpp  utils.cpp
src/blur/: gaussian.cpp
src/edged/: sobelx.cu  sobelxy.cu  sobely.cu
src/gengrad/: asyncgengrad.cu  gengrad.cu  trueasyncgrad.cu
